k8s-manifests/frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: lab5
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: k8s-frontend:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
